[workspace]
members = [
	"macro",
]

[package]
authors = ["Tangram <root@tangram.xyz"]
description = "Web Application Build Tool"
documentation = "https://docs.rs/sunfish"
edition = "2018"
homepage = "https://github.com/tangramxyz/sunfish"
license = "MIT"
name = "sunfish"
publish = true
repository = "https://github.com/tangramxyz/sunfish"
version = "0.2.3"

[lib]
path = "lib.rs"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
futures = "0.3"
hex = "0.4"
http = "0.2"
hyper = { version = "0.14", features = ["full"] }
ignore = "0.4"
rayon = "1.5"
sha2 = "0.9"
sunfish_macro = { version = "0.2", path = "macro" }
tokio = { version = "1" ,features = ["full"] }
toml = "0.5"
tracing = "0.1"
wasm-bindgen-cli-support = "0.2"
which = "4"
