[workspace]
members = [
	"macro",
]

[package]
authors = ["Tangram <root@tangram.dev"]
description = "Web Application Build Tool"
documentation = "https://docs.rs/sunfish"
edition = "2018"
homepage = "https://github.com/tangramdotdev/sunfish"
license = "MIT"
name = "sunfish"
publish = true
repository = "https://github.com/tangramdotdev/sunfish"
version = "0.2.4"

[lib]
path = "lib.rs"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "3.0.0-beta.2", features = ["color"] }
futures = "0.3"
futures-batch = "0.6"
hex = "0.4"
http = "0.2"
hyper = { version = "0.14", features = ["full"] }
ignore = "0.4"
notify = "5.0.0-pre.9"
rayon = "1.5"
sha2 = "0.9"
sunfish_macro = { version = "0.2", path = "macro" }
tokio = { version = "1" ,features = ["full"] }
tokio-stream = "0.1"
toml = "0.5"
tracing = "0.1"
wasm-bindgen-cli-support = "0.2"
which = "4"
