[workspace]
members = [
	"macro",
]

[package]
authors = ["Tangram <root@tangram.dev"]
description = "Web Application Build Tool"
documentation = "https://docs.rs/sunfish"
edition = "2021"
homepage = "https://github.com/tangramdotdev/sunfish"
license = "MIT"
name = "sunfish"
publish = true
repository = "https://github.com/tangramdotdev/sunfish"
rust-version = "1.57"
version = "0.7.2"

[lib]
path = "lib.rs"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
digest = "0.10"
futures = "0.3"
futures-batch = "0.6"
hex = "0.4"
http = "0.2"
hyper = { version = "0.14", features = ["full"] }
ignore = "0.4"
notify = "5.0.0-pre.14"
parcel_css = "1.0.0-alpha.23"
rayon = "1.5"
sha2 = "0.10"
sunfish_macro = { version = "0.7", path = "macro" }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
toml = "0.5"
tracing = "0.1"
walkdir = "2"
wasm-bindgen-cli-support = "0.2"
which = "4"
