[package]
authors = ["Tangram <root@tangram.dev"]
description = "Web Application Build Tool"
documentation = "https://docs.rs/sunfish"
edition = "2021"
homepage = "https://github.com/tangramdotdev/sunfish"
license = "MIT"
name = "sunfish_macro"
publish = true
repository = "https://github.com/tangramdotdev/sunfish"
rust-version = "1.57"
version = "0.3.1"

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
glob = "0.3"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
toml = "0.5"
walkdir = "2"
