[package]
authors = ["Tangram <root@tangram.dev"]
description = "Web Application Build Tool"
documentation = "https://docs.rs/sunfish"
edition = "2021"
homepage = "https://github.com/tangramdotdev/sunfish"
license = "MIT"
name = "sunfish_macro"
publish = true
repository = "https://github.com/tangramdotdev/sunfish"
rust-version = "1.57"
version = "0.7.0"

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
digest = "0.10"
glob = "0.3"
hex = "0.4"
proc-macro2 = "1"
quote = "1"
sha2 = "0.10"
syn = { version = "1", features = ["full"] }
toml = "0.5"
walkdir = "2"
